Fix vertical alignment of material icon font

--- a/app/assets/stylesheets/atoms/_icons.scss
+++ b/app/assets/stylesheets/atoms/_icons.scss
@@ -64,13 +64,13 @@
 }
 
 [class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
   font-family: $font-icon;
   speak: none;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
+  vertical-align: -.1em;
   line-height: 1;
 
   /* Better Font Rendering =========== */
