--- a/app/assets/stylesheets/molecules/_flashes.scss
+++ b/app/assets/stylesheets/molecules/_flashes.scss
@@ -65,6 +65,7 @@
     display: inline-block;
     font-family: $font-icon;
     margin-right: .5em;
+    vertical-align: -.1em;
   }
 }
 
